[package]
name = "imc-rust"
version = "0.0.1"
authors = ["Tiago Sá Marques <samarques.tiago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
crc16 = "*"
xml-rs = "0.8"
clap = "2.33.0"
rustache = "^0.1"

[[bin]]
name = "imc-rust"
path = "src/main.rs"
